# Jmoji

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements-colab.txt  requirements.txt
configs/: default.yaml
configs/experiment/: generate_v4.yaml  test_qwen3.yaml
docs/: evaluation.md  implemention_guide.md  research_overview.md  status.md
docs/details/: dataset_generation_v3.md  experiment_plan_v3_improvements.md  experiment_v1_1000samples.md  experiment_v3_5000samples.md  experiment_v3_improvements.md  experiment_v4_results.md  human_eval_results.md  llm_eval_results.md  teacher_model_migration.md
docs/details/datasets/: generation_v3.md
docs/details/evaluations/: human_eval_results.md  (+1 more)
notebooks/: inference.ipynb  inference.py  train_t5.ipynb  train_t5_colab.ipynb  train_t5_colab.py
outputs/: predictions_with_penalty.jsonl
outputs/human_eval/: report.md  results.json  samples.csv  samples.md
scripts/: analyze_human_eval.py  generate_dataset.py  generate_predictions.py  generate_predictions_with_penalty.py  prepare_human_eval.py  test_repetition_penalty.py  train.py  upload_dataset_to_hf.py
src/: config.py
src/data/: emoji_utils.py  text_preprocessor.py  wikipedia_loader.py
src/evaluation/: metrics.py
src/generation/: dataset_generator.py  openrouter_client.py  prompts.py
src/models/: t5_trainer.py
tests/: test_config.py  test_dataset_generator.py  test_emoji_utils.py  test_metrics.py  test_openrouter_client.py  test_t5_trainer.py  test_text_preprocessor.py  test_wikipedia_loader.py
(+49 files in other folders)
