[project]
name = "j-moji"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "emoji>=2.15.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "tenacity>=9.1.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
    "types-pyyaml>=6.0.12.20250915",
]
