[project]
name = "j-moji"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0.0",
    "emoji>=2.15.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0,<2.3.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.4.0",
    "tenacity>=8.0.0",
    "torch>=2.0.0",
    "tqdm>=4.66.0",
    "transformers>=4.40.0",
    "sentencepiece>=0.2.1",
    "protobuf>=6.33.2",
]

[dependency-groups]
dev = [
    "jupytext>=1.18.1",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.7",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]             # line too long
